Changed frontend to React.js

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -10,9 +10,10 @@
 	</head>
 
 	<body>
-		<div id="map">
+		<div id="app">
+
 		</div>
-		<div id="details">
+		<!-- <div id="details">
 			<h1 id="details-name"></h1>
 			<table class="details-table">
 				<tr class="details-row">
@@ -48,14 +49,16 @@
 					</td>
 				</tr>
 			</table>
-		</div>
+		</div> -->
 		
 		<script src="js/jquery-3.2.1.js"></script>
 		<script src="js/jquery-ui.js"></script>
 		<script src="js/jquery-ui-timepicker-addon.js"></script>
 		<script src="js/underscore.js"></script>
+		<script src="https://unpkg.com/react@15/dist/react.js"></script>
+		<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
 		<script src="js/main.js"></script>
-		<script async defer
+		<script async defer type="text/javascript"
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIokLbj2DDfasexUcXuOPkhU2qnnziWZc&callback=initMap">
 		</script>
 	</body>
