Removed old comments

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -13,50 +13,13 @@
 		<div id="app">
 
 		</div>
-		<!-- <div id="details">
-			<h1 id="details-name"></h1>
-			<table class="details-table">
-				<tr class="details-row">
-					<td class="details-cell">
-						<h3>Latest:</h3>
-						<div id="latest" class="details-indent"></div>
-						<h3>24h maximum:</h3>
-						<div id="maximum" class="details-indent"></div>
-						<h3>24h minimum:</h3>
-						<div id="minimum" class="details-indent"></div>
-					</td>
-					<td class="details-cell">
-						<h3>Add log:</h3>
-						<form id="input" onsubmit="return false;">
-							Temperature: <br>
-							<input id="input-temperature" name="temperature" type="number" step="any" size="5" required></input>
-							<select id="input-temperatureunit">
-								<option value="celcius">Celcius</option>
-								<option value="fahrenheit">Fahrenheit</option>
-								<option value="kelvin">Kelvin</option>
-							</select><br>
-							Time: <br>
-							<input id="input-time" name="time" type="text" size="30" required></input> <br> <br>
-							<input value="Add log" type="submit"></input>
-						</form> 
-						<div id="input-message"></div>
-					</td>
-				</tr>
-				<tr class="details-row">
-					<td colspan="2" class="details-cell">
-						<table id="history">
-						</table>
-					</td>
-				</tr>
-			</table>
-		</div> -->
 		
 		<script src="js/jquery-3.2.1.js"></script>
 		<script src="js/jquery-ui.js"></script>
 		<script src="js/jquery-ui-timepicker-addon.js"></script>
 		<script src="js/underscore.js"></script>
-		<script src="https://unpkg.com/react@15/dist/react.js"></script>
-		<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+		<script src="js/react.js"></script>
+		<script src="js/react-dom.js"></script>
 		<script src="js/main.js"></script>
 		<script async defer type="text/javascript"
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIokLbj2DDfasexUcXuOPkhU2qnnziWZc&callback=initMap">
